fix: burger menu on mobile #10

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -28,6 +28,7 @@
       --burger-height: 20px;
       --burger-line-height: 2px;
       position: relative;
+      z-index: 1000;
 
       display: none;
 
@@ -110,14 +111,17 @@
       align-items: center;
 
       @include large {
-        position: absolute;
-        z-index: 1000;
-        top: 100%;
+        position: fixed;
+        z-index: 999;
+        top: 0;
         right: 0;
 
         display: none;
         align-items: stretch;
         flex-direction: column;
+
+        width: 100%;
+        height: 100%;
 
         padding: 20px;
 
@@ -126,8 +130,8 @@
         background-color: #fff;
       }
 
-      @include small {
-        width: 100%;
+      &_active {
+        display: block;
       }
     }
 
@@ -213,9 +217,11 @@
 
       @include large {
         flex-direction: column;
-        row-gap: 20px;
+
+        max-width: 300px;
 
         margin-left: 0;
+        row-gap: 20px;
       }
     }
   }
